<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_Home"
        android:title="@string/action_home"
        android:icon="@drawable/icon_home"/>
    <item android:id="@+id/action_Notification"
        android:title="@string/action_notification"
        android:icon="@drawable/icon_notifications"/>
    <item android:id="@+id/action_ShoppingCart"
        android:title="@string/action_shoppingCart"
        android:icon="@drawable/icon_shopping_cart"/>
    <item android:id="@+id/action_HistoryShopping"
        android:title="@string/action_historyShopping"
        android:icon="@drawable/icon_info"/>
    <item android:id="@+id/action_info"
        android:title="@string/action_info"
        android:icon="@drawable/icon_account_circle"/>
</menu>